# telegram_bot_expenses

./: config.py  main.py  pyproject.toml
